--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,9 +5,17 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "Launch file",
       "type": "go",
       "request": "launch",
+      "mode": "debug",
+      "program": "${file}",
+      "console": "integratedTerminal"
+    },
+    {
       "name": "Debug Email",
+      "type": "go",
+      "request": "launch",
       "mode": "debug",
       "program": "${workspaceFolder}/email"
     }
